--- a/templates/ospf.conf
+++ b/templates/ospf.conf
@@ -1,10 +1,10 @@
 # <%= @puppet_header %>
 # <%=  __FILE__.gsub(/.*?puppet\//,@fqdn + ':') %>
-#protocol ospf <%= @ospf_name %> {
-#    tick <%= @tick %>
-#    <% if @rfc1583compat %>rfc1583compat yes;<% end %>
-#    <% if @ecmp %>ecmp yes;<% end %>
-#<%
+protocol ospf <%= @ospf_name %> {
+    tick <%= @tick %>
+    <% if @rfc1583compat %>rfc1583compat yes;<% end %>
+    <% if @ecmp %>ecmp yes;<% end %>
+<%
 def dump_hash(h)
   h.each do |k, v|
     if v.is_a?(Hash)
@@ -25,59 +25,4 @@ def dump_hash(h)
 end
 
 dump_hash(@areas)
-
-
-#	rfc1583compat yes;
-#	area 0.0.0.0 {
-#		stub no;
-#		interface "eth*" {
-#			hello 9;
-#			retransmit 6;
-#			cost 10;
-#			transmit delay 5;
-#			dead count 5;
-#			wait 50;
-#			type broadcast;
-#			authentication simple;
-#			password "pass";
-#		};
-#		interface "arc0" {
-#			rx buffer large;
-#			type nonbroadcast;
-#			poll 14;
-#			dead 75;
-#			neighbors {
-#				10.1.1.2 eligible;
-#				10.1.1.4;
-#			};
-#			strict nonbroadcast yes;
-#		};
-#		interface "xxx0" {
-#                       passwords {
-#				password "abc" {
-#					id 1;
-#					generate to "22-04-2003 11:00:06";
-#					accept to "17-01-2004 12:01:05";
-#				};
-#				password "def" {
-#					id 2;
-#					generate from "22-04-2003 11:00:07";
-#					accept from "17-01-2003 12:01:05";
-#				};
-#			};
-#                       authentication cryptographic;
-#		};
-#	};
-#	area 20 {
-#		stub 1;
-#		interface "ppp1" {
-#			hello 8;
-#			authentication none;
-#		};
-#               interface "fr*";
-#               virtual link 192.168.0.1 {
-#                       password "sdsdffsdfg";
-#                       authentication cryptographic;
-#               };
-#	};
-#}
+%>
