yeah puppetlabs, make concat work different than in every documented use case in ERB, great fucking idea

--- a/templates/ospf.conf
+++ b/templates/ospf.conf
@@ -8,18 +8,18 @@ protocol ospf <%= @ospf_name %> {
 def dump_hash(h)
   h.each do |k, v|
     if v.is_a?(Hash)
-      concat k + " { \n"
+      _erbout.concat k + " { \n"
       dump_hash(v)
-      concat "\n"
+      _erbout.concat "\n"
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
-      concat k
+      _erbout.concat k
       if v.is_a?(TrueClass)
-        concat " yes;\n"
+        _erbout.concat " yes;\n"
       else
-        concat " no;\n"
+        _erbout.concat " no;\n"
       end
     else
-      concat k + " " + "\"v\"" + ";\n"
+      _erbout.concat k + " " + "\"v\"" + ";\n"
     end
   end
 end
