fuck everything about ruby, rails and its whole garbage environment

--- a/templates/ospf.conf
+++ b/templates/ospf.conf
@@ -8,18 +8,18 @@ protocol ospf <%= @ospf_name %> {
 def dump_hash(h)
   h.each do |k, v|
     if v.is_a?(Hash)
-      _erbout.concat k + " { \n"
+      _erbout << k + " { \n"
       dump_hash(v)
-      _erbout.concat "\n"
+      _erbout << "\n"
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
-      _erbout.concat k
+      _erbout << k
       if v.is_a?(TrueClass)
-        _erbout.concat " yes;\n"
+        _erbout << " yes;\n"
       else
-        _erbout.concat " no;\n"
+        _erbout << " no;\n"
       end
     else
-      _erbout.concat k + " " + "\"v\"" + ";\n"
+      _erbout << k + " " + "\"v\"" + ";\n"
     end
   end
 end
