ruby scoping is retarded...

--- a/templates/ospf.conf
+++ b/templates/ospf.conf
@@ -5,24 +5,26 @@ protocol ospf <%= @ospf_name %> {
     <% if @rfc1583compat %>rfc1583compat yes;<% end %>
     <% if @ecmp %>ecmp yes;<% end %>
 <%
-def dump_hash(h)
+@__bird__ospf_s=""
+def dump_hash(h,d)
   h.each do |k, v|
+    @__bird__ospf_s << " " * (2 * d)
     if v.is_a?(Hash)
-      _erbout << k + " { \n"
-      dump_hash(v)
-      _erbout << "\n"
+      @__bird__ospf_s << k + " { \n"
+      dump_hash(v,d+1)
+      @__bird__ospf_s << "\n}\n" %><%
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
-      _erbout << k
+      @__bird__ospf_s << k
       if v.is_a?(TrueClass)
-        _erbout << " yes;\n"
+         @__bird__ospf_s << " yes;\n"
       else
-        _erbout << " no;\n"
+        @__bird__ospf_s << " no;\n"
       end
     else
-      _erbout << k + " " + "\"v\"" + ";\n"
+      @__bird__ospf_s << k + " " + "\"#{v}\"" + ";\n"
     end
   end
 end
-
-dump_hash(@areas)
+dump_hash(@areas,0)
 %>
+<%= @__bird__ospf_s %>
