--- a/templates/bird.conf
+++ b/templates/bird.conf
@@ -6,7 +6,7 @@
 
 log syslog { debug, trace, info, remote, warning, error, auth, fatal, bug };
 
-router_id <%= @router_id %>
+router id <%= @router_id %>;
 
 # i dont think any1 would want that off
 
@@ -16,7 +16,7 @@ protocol device {
 
 # include rest of configs
 
-include "v4/*.conf"
+include "v4.d/*.conf";
 
 
 # just for reference include original file
