--- a/templates/ospf.conf
+++ b/templates/ospf.conf
@@ -1,7 +1,7 @@
 # <%= @puppet_header %>
 # <%=  __FILE__.gsub(/.*?puppet\//,@fqdn + ':') %>
 protocol ospf <%= @ospf_name %> {
-    tick <%= @tick %>
+    tick <%= @tick %>;
     <% if @rfc1583compat %>rfc1583compat yes;<% end %>
     <% if @ecmp %>ecmp yes;<% end %>
 <%
@@ -28,3 +28,4 @@ end
 dump_hash(@areas,0)
 %>
 <%= @__bird__ospf_s %>
+;;
