more generic approach

--- a/templates/part.conf
+++ b/templates/part.conf
@@ -5,27 +5,27 @@ protocol ospf <%= @ospf_name %> {
     <% if @rfc1583compat %>rfc1583compat yes;<% end %>
     <% if @ecmp %>ecmp yes;<% end %>
 <%
-@__bird__ospf_s=""
+@__bird__cfg_s=""
 def dump_hash(h,d)
   h.each do |k, v|
-    @__bird__ospf_s << " " * (2 * d)
+    @__bird__cfg_s << " " * (2 * d)
     if v.is_a?(Hash)
-      @__bird__ospf_s << k + " { \n"
+      @__bird__cfg_s << k + " { \n"
       dump_hash(v,d+1)
-      @__bird__ospf_s << "\n}\n" %><%
+      @__bird__cfg_s << "\n}\n" %><%
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
-      @__bird__ospf_s << k
+      @__bird__cfg_s << k
       if v.is_a?(TrueClass)
-         @__bird__ospf_s << " yes;\n"
+         @__bird__cfg_s << " yes;\n"
       else
-        @__bird__ospf_s << " no;\n"
+        @__bird__cfg_s << " no;\n"
       end
     else
-      @__bird__ospf_s << k + " " + "\"#{v}\"" + ";\n"
+      @__bird__cfg_s << k + " " + "\"#{v}\"" + ";\n"
     end
   end
 end
-dump_hash(@areas,0)
+dump_hash(@config,0)
 %>
-<%= @__bird__ospf_s %>
-;;
+<%= @__bird__cfg_s %>
+#
