--- a/templates/part.conf
+++ b/templates/part.conf
@@ -1,10 +1,5 @@
 # <%= @puppet_header %>
 # <%=  __FILE__.gsub(/.*?puppet\//,@fqdn + ':') %>
-protocol ospf <%= @ospf_name %> {
-    tick <%= @tick %>;
-    <% if @rfc1583compat %>rfc1583compat yes;<% end %>
-    <% if @ecmp %>ecmp yes;<% end %>
-<%
 @__bird__cfg_s=""
 def dump_hash(h,d)
   h.each do |k, v|
@@ -12,7 +7,8 @@ def dump_hash(h,d)
     if v.is_a?(Hash)
       @__bird__cfg_s << k + " { \n"
       dump_hash(v,d+1)
-      @__bird__cfg_s << "\n}\n" %><%
+      @__bird__cfg_s << " " * (2 * d)
+      @__bird__cfg_s << "\n};\n" %><%
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
       @__bird__cfg_s << k
       if v.is_a?(TrueClass)
