--- a/templates/bird.conf
+++ b/templates/bird.conf
@@ -53,23 +53,23 @@ include "v4.d/*.conf";
 # tables and the kernel. If your kernel supports multiple routing tables
 # (as Linux 2.2.x does), you can run multiple instances of the kernel
 # protocol and synchronize different kernel tables with different BIRD tables.
-protocol kernel {
-#	learn;			# Learn all alien routes from the kernel
-	persist;		# Don't remove routes on bird shutdown
-	scan time 20;		# Scan kernel routing table every 20 seconds
-#	import none;		# Default is import all
-	export all;		# Default is export none
-#	kernel table 5;		# Kernel table to synchronize with (default: main)
+# protocol kernel {
+# #	learn;			# Learn all alien routes from the kernel
+# 	persist;		# Don't remove routes on bird shutdown
+# 	scan time 20;		# Scan kernel routing table every 20 seconds
+# #	import none;		# Default is import all
+# 	export all;		# Default is export none
+# #	kernel table 5;		# Kernel table to synchronize with (default: main)
 }
 
 # This pseudo-protocol watches all interface up/down events.
-protocol device {
-	scan time 10;		# Scan interfaces every 10 seconds
-}
+#protocol device {
+#	scan time 10;		# Scan interfaces every 10 seconds
+#}
 
 # Static routes (again, there can be multiple instances, so that you
 # can disable/enable various groups of static routes on the fly).
-protocol static {
+#protocol static {
 #	disabled;		# Disable by default
 #	table testable;		# Connect to a non-default table
 #	preference 1000;	# Default preference of routes
@@ -82,7 +82,7 @@ protocol static {
 #	route 10.1.2.0:255.255.255.0 via 198.51.100.3;
 #	route 10.1.3.0:255.255.255.0 via 198.51.100.4;
 #	route 10.2.0.0/24 via "arc0";
-}
+#}
 
 # Pipe protocol connects two routing tables... Beware of loops.
 #protocol pipe {
