--- a/templates/part.conf
+++ b/templates/part.conf
@@ -8,7 +8,23 @@ def dump_hash(h,d)
       @__bird__cfg_s << k + " { \n"
       dump_hash(v,d+1)
       @__bird__cfg_s << " " * (2 * d)
-      @__bird__cfg_s << "\n};\n" %><%
+      @__bird__cfg_s << "\n};\n"
+    elsif v.is_a?(Array)
+     @__bird__cfg_s << "# #{k}\n"
+      v.flatten.each do |line|
+        if line.is_a?(Hash)
+          line.each do |k, v|
+            @__bird__cfg_s << " " * (2 * d)
+            @__bird__cfg_s << k + " { \n"
+            dump_hash(v,d+1)
+            @__bird__cfg_s << " " * (2 * d)
+            @__bird__cfg_s << "\n};\n"
+          end
+        else
+          @__bird__cfg_s << " " * (2 * d)
+          @__bird__cfg_s << line << ";\n"
+        end
+      end
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
       @__bird__cfg_s << k
       if v.is_a?(TrueClass)
@@ -16,11 +32,18 @@ def dump_hash(h,d)
       else
         @__bird__cfg_s << " no;\n"
       end
+    elsif v.nil?
+      @__bird__cfg_s << k + ";\n"
     else
-      @__bird__cfg_s << k + " " + "\"#{v}\"" + ";\n"
+      if v =~ /^\d+$/
+        @__bird__cfg_s << k + " " + "#{v}" + ";\n"
+      else
+        @__bird__cfg_s << k + " " + "\"#{v}\"" + ";\n"
+      end
     end
   end
 end
+
 dump_hash(@config,0)
 %>
 <%= @__bird__cfg_s %>
