--- a/templates/part.conf
+++ b/templates/part.conf
@@ -8,24 +8,28 @@ def dump_hash(h,d)
     if v.is_a?(Hash)
       @__bird__cfg_s << k + " { \n"
       dump_hash(v,d+1)
+      @__bird__cfg_s << "\n"
       @__bird__cfg_s << " " * (2 * d)
-      @__bird__cfg_s << "\n};\n"
+      @__bird__cfg_s << "};\n"
     elsif v.is_a?(Array)
-     @__bird__cfg_s << "# #{k}\n"
+      @__bird__cfg_s << k + " { \n"
       v.flatten.each do |line|
         if line.is_a?(Hash)
           line.each do |k, v|
-            @__bird__cfg_s << " " * (2 * d)
+            @__bird__cfg_s << " " * (2 * (d + 1))
             @__bird__cfg_s << k + " { \n"
-            dump_hash(v,d+1)
-            @__bird__cfg_s << " " * (2 * d)
+            dump_hash(v,d+2)
+            @__bird__cfg_s << " " * (2 * (d + 1))
             @__bird__cfg_s << "\n};\n"
           end
         else
-          @__bird__cfg_s << " " * (2 * d)
+          @__bird__cfg_s << " " * (2 * (d + 1))
           @__bird__cfg_s << line << ";\n"
         end
       end
+      @__bird__cfg_s << "\n"
+      @__bird__cfg_s << " " * (2 * (d))
+      @__bird__cfg_s << "};\n"
     elsif v.is_a?(TrueClass) || v.is_a?(FalseClass)
       @__bird__cfg_s << k
       if v.is_a?(TrueClass)
