Document details about how parser works

--- a/templates/part.conf
+++ b/templates/part.conf
@@ -1,6 +1,7 @@
 # <%= @puppet_header %>
 # <%=  __FILE__.gsub(/.*?puppet\//,@fqdn + ':') %>
 <%
+# this ugly construct is requires because _erbout stops working inside function... and I cba to dig thru ruby shittines to discover why
 @__bird__cfg_s=""
 def dump_hash(h,d)
   h.each do |k, v|
@@ -40,7 +41,7 @@ def dump_hash(h,d)
     elsif v.nil?
       @__bird__cfg_s << k + ";\n"
     else
-      if v =~ /^\d+$/
+      if v.to_s =~ /^\d+$/
         @__bird__cfg_s << k + " " + "#{v}" + ";\n"
       else
         @__bird__cfg_s << k + " " + "\"#{v}\"" + ";\n"
