centos support, auto-prio on filters

--- a/templates/bird.conf
+++ b/templates/bird.conf
@@ -16,7 +16,7 @@ protocol device {
 
 # include rest of configs
 
-include "v4.d/*.conf";
+include "/etc/bird/v4.d/*.conf";
 
 
 # just for reference include original file
