allow specifying empty key

--- a/templates/part.conf
+++ b/templates/part.conf
@@ -41,7 +41,9 @@ def dump_hash(h,d)
     elsif v.nil?
       @__bird__cfg_s << k + ";\n"
     else
-      if v.to_s =~ /^\d+$/
+      if v.to_s =~ /^\s*$/
+        @__bird__cfg_s << k + " " +";\n"
+      elsif v.to_s =~ /^\d+$/
         @__bird__cfg_s << k + " " + "#{v}" + ";\n"
       else
         @__bird__cfg_s << k + " " + "\"#{v}\"" + ";\n"
