do not show env path, it is unnecesarry spam

--- a/templates/part.conf
+++ b/templates/part.conf
@@ -1,5 +1,5 @@
 # <%= @puppet_header %>
-# <%=  __FILE__.gsub(/.*?puppet\//,@fqdn + ':') %>
+# <%=  __FILE__.gsub(/.*?modules\//,@fqdn + ':') %>
 <%
 # this ugly construct is requires because _erbout stops working inside function... and I cba to dig thru ruby shittines to discover why
 @__bird__cfg_s=""
